--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -23,6 +24,7 @@
     "expo-status-bar": "~2.0.0",
     "react": "18.2.0",
     "react-native": "0.76.5",
+    "react-native-calendars": "^1.1308.1",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-hyperlink": "^0.0.22",
     "react-native-linear-gradient": "^2.8.3",
