--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.23",
+    "expo-file-system": "^18.0.7",
     "expo-font": "~13.0.2",
     "expo-image-picker": "~16.0.3",
+    "expo-sharing": "^13.0.1",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "react": "18.2.0",
