--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react": "18.2.0",
     "react-native": "0.76.5",
     "react-native-calendars": "^1.1308.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-gifted-charts": "^1.4.58",
     "react-native-hyperlink": "^0.0.22",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
