--- a/package.json
+++ b/package.json
@@ -17,25 +17,25 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
-    "expo": "~52.0.23",
+    "expo": "^53.0.9",
     "expo-file-system": "^18.0.7",
-    "expo-font": "~13.0.2",
-    "expo-image-picker": "~16.0.3",
-    "expo-sharing": "^13.0.1",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "react": "18.2.0",
-    "react-native": "0.76.5",
+    "expo-font": "~13.3.1",
+    "expo-image-picker": "~16.1.4",
+    "expo-sharing": "~13.1.5",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-calendars": "^1.1308.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gifted-charts": "^1.4.58",
     "react-native-hyperlink": "^0.0.22",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
-    "react-native-pager-view": "6.6.1",
+    "react-native-pager-view": "6.7.1",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.0.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-stack": "^1.0.0-alpha11",
     "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0"
